// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Open API helpers depictAny() should depict ZodAny 1`] = `
Object {
  "description": "test",
  "format": "any",
}
`;

exports[`Open API helpers depictArray() should depict ZodArray 1`] = `
Object {
  "description": "test",
  "items": Object {
    "type": "boolean",
  },
  "type": "array",
}
`;

exports[`Open API helpers depictBigInt() should depict ZodBigInt 1`] = `
Object {
  "description": "test",
  "format": "bigint",
  "type": "integer",
}
`;

exports[`Open API helpers depictBoolean() should depict ZodBoolean 1`] = `
Object {
  "description": "test",
  "type": "boolean",
}
`;

exports[`Open API helpers depictDate() should depict ZodDate 1`] = `
Object {
  "description": "test",
  "format": "date",
  "type": "string",
}
`;

exports[`Open API helpers depictDefault() should depict ZodDefault 1`] = `
Object {
  "default": true,
  "description": "test",
  "type": "boolean",
}
`;

exports[`Open API helpers depictEffect() should depict ZodEffects preprocess in case of request 1`] = `
Object {
  "format": "string (preprocessed)",
}
`;

exports[`Open API helpers depictEffect() should depict ZodEffects transformation in case of request 1`] = `
Object {
  "type": "string",
}
`;

exports[`Open API helpers depictEffect() should depict ZodEffects transformation in case of response 1`] = `
Object {
  "type": "number",
}
`;

exports[`Open API helpers depictEnum() should depict ZodEnum 1`] = `
Object {
  "description": "test",
  "enum": Array [
    "one",
    "two",
  ],
  "type": "string",
}
`;

exports[`Open API helpers depictEnum() should depict ZodNativeEnum 1`] = `
Object {
  "description": "test",
  "enum": Array [
    "ONE",
    "TWO",
  ],
  "type": "string",
}
`;

exports[`Open API helpers depictFile() should depict ZodFile 1`] = `
Object {
  "description": "test",
  "format": "binary",
  "type": "string",
}
`;

exports[`Open API helpers depictIOExamples() should depict examples in case of request 1`] = `
Object {
  "examples": Object {
    "example1": Object {
      "value": Object {
        "one": "test",
        "two": 123,
      },
    },
    "example2": Object {
      "value": Object {
        "one": "test2",
        "two": 456,
      },
    },
  },
}
`;

exports[`Open API helpers depictIOExamples() should depict examples in case of response 1`] = `
Object {
  "examples": Object {
    "example1": Object {
      "value": Object {
        "one": 4,
        "two": "123",
      },
    },
    "example2": Object {
      "value": Object {
        "one": 5,
        "two": "456",
      },
    },
  },
}
`;

exports[`Open API helpers depictIOParamExamples() should depict examples in case of request 1`] = `
Object {
  "examples": Object {
    "example1": Object {
      "value": 123,
    },
    "example2": Object {
      "value": 456,
    },
  },
}
`;

exports[`Open API helpers depictIOParamExamples() should depict examples in case of response 1`] = `
Object {
  "examples": Object {
    "example1": Object {
      "value": "123",
    },
    "example2": Object {
      "value": "456",
    },
  },
}
`;

exports[`Open API helpers depictIntersection() should depict ZodIntersection 1`] = `
Object {
  "allOf": Array [
    Object {
      "properties": Object {
        "one": Object {
          "exclusiveMaximum": false,
          "exclusiveMinimum": false,
          "format": "double",
          "maximum": 1.7976931348623157e+308,
          "minimum": 5e-324,
          "type": "number",
        },
      },
      "required": Array [
        "one",
      ],
      "type": "object",
    },
    Object {
      "properties": Object {
        "two": Object {
          "exclusiveMaximum": false,
          "exclusiveMinimum": false,
          "format": "double",
          "maximum": 1.7976931348623157e+308,
          "minimum": 5e-324,
          "type": "number",
        },
      },
      "required": Array [
        "two",
      ],
      "type": "object",
    },
  ],
  "description": "test",
}
`;

exports[`Open API helpers depictLiteral() should depict ZodLiteral 1`] = `
Object {
  "description": "test",
  "enum": Array [
    "testing",
  ],
  "type": "string",
}
`;

exports[`Open API helpers depictNull() should depict ZodNull 1`] = `
Object {
  "description": "test",
  "format": "null",
  "nullable": true,
  "type": "string",
}
`;

exports[`Open API helpers depictNumber() should depict ZodNumber with refinements 1`] = `
Object {
  "description": "test",
  "exclusiveMaximum": false,
  "exclusiveMinimum": false,
  "format": "int64",
  "maximum": 20,
  "minimum": 10,
  "type": "integer",
}
`;

exports[`Open API helpers depictNumber() should depict regular ZodNumber 1`] = `
Object {
  "description": "test",
  "exclusiveMaximum": false,
  "exclusiveMinimum": false,
  "format": "double",
  "maximum": 1.7976931348623157e+308,
  "minimum": 5e-324,
  "type": "number",
}
`;

exports[`Open API helpers depictObject() should depict ZodObject 1`] = `
Object {
  "description": "test",
  "properties": Object {
    "one": Object {
      "exclusiveMaximum": false,
      "exclusiveMinimum": false,
      "format": "double",
      "maximum": 1.7976931348623157e+308,
      "minimum": 5e-324,
      "type": "number",
    },
    "two": Object {
      "type": "string",
    },
  },
  "required": Array [
    "one",
    "two",
  ],
  "type": "object",
}
`;

exports[`Open API helpers depictObjectProperties() should depict ZodObject shape 1`] = `
Object {
  "one": Object {
    "type": "string",
  },
  "two": Object {
    "type": "boolean",
  },
}
`;

exports[`Open API helpers depictOptionalOrNullable() should depict ZodNullable 1`] = `
Object {
  "description": "test",
  "nullable": true,
  "type": "string",
}
`;

exports[`Open API helpers depictOptionalOrNullable() should depict ZodOptional 1`] = `
Object {
  "description": "test",
  "type": "string",
}
`;

exports[`Open API helpers depictRecord() should depict ZodRecord with key schema enum 1`] = `
Object {
  "description": "test",
  "properties": Object {
    "one": Object {
      "type": "boolean",
    },
    "two": Object {
      "type": "boolean",
    },
  },
  "required": Array [
    "one",
    "two",
  ],
  "type": "object",
}
`;

exports[`Open API helpers depictRecord() should depict ZodRecord with key schema literal 1`] = `
Object {
  "description": "test",
  "properties": Object {
    "testing": Object {
      "type": "boolean",
    },
  },
  "required": Array [
    "testing",
  ],
  "type": "object",
}
`;

exports[`Open API helpers depictRecord() should depict ZodRecord with key schema string 1`] = `
Object {
  "additionalProperties": Object {
    "type": "boolean",
  },
  "description": "test",
  "type": "object",
}
`;

exports[`Open API helpers depictRecord() should depict ZodRecord with key schema union of literals 1`] = `
Object {
  "description": "test",
  "properties": Object {
    "one": Object {
      "type": "boolean",
    },
    "two": Object {
      "type": "boolean",
    },
  },
  "required": Array [
    "one",
    "two",
  ],
  "type": "object",
}
`;

exports[`Open API helpers depictRecord() should depict classic ZodRecord 1`] = `
Object {
  "additionalProperties": Object {
    "type": "boolean",
  },
  "description": "test",
  "type": "object",
}
`;

exports[`Open API helpers depictRequestParams() should depict only path params if query is disabled 1`] = `
Array [
  Object {
    "in": "path",
    "name": "id",
    "required": true,
    "schema": Object {
      "description": "GET /v1/user/:id parameter",
      "type": "string",
    },
  },
]
`;

exports[`Open API helpers depictRequestParams() should depict query and path params 1`] = `
Array [
  Object {
    "in": "path",
    "name": "id",
    "required": true,
    "schema": Object {
      "description": "GET /v1/user/:id parameter",
      "type": "string",
    },
  },
  Object {
    "in": "query",
    "name": "test",
    "required": true,
    "schema": Object {
      "description": "GET /v1/user/:id parameter",
      "type": "boolean",
    },
  },
]
`;

exports[`Open API helpers depictString() should depict ZodString with refinements 1`] = `
Object {
  "description": "test",
  "format": "email",
  "maxLength": 20,
  "minLength": 10,
  "type": "string",
}
`;

exports[`Open API helpers depictString() should depict ZodString with regex 1`] = `
Object {
  "description": "test",
  "pattern": "/^\\\\d+.\\\\d+.\\\\d+$/",
  "type": "string",
}
`;

exports[`Open API helpers depictString() should depict regular ZodString 1`] = `
Object {
  "description": "test",
  "type": "string",
}
`;

exports[`Open API helpers depictTuple() should depict ZodTuple 1`] = `
Object {
  "description": "test",
  "items": Object {
    "description": "0: boolean, 1: string, 2: string",
    "format": "tuple",
    "oneOf": Array [
      Object {
        "type": "boolean",
      },
      Object {
        "type": "string",
      },
      Object {
        "enum": Array [
          "test",
        ],
        "type": "string",
      },
    ],
  },
  "maxItems": 3,
  "minItems": 3,
  "type": "array",
}
`;

exports[`Open API helpers depictUnion() should depict ZodUnion 1`] = `
Object {
  "description": "test",
  "oneOf": Array [
    Object {
      "type": "string",
    },
    Object {
      "exclusiveMaximum": false,
      "exclusiveMinimum": false,
      "format": "double",
      "maximum": 1.7976931348623157e+308,
      "minimum": 5e-324,
      "type": "number",
    },
  ],
}
`;

exports[`Open API helpers depictUpload() should depict ZodUpload 1`] = `
Object {
  "description": "test",
  "format": "binary",
  "type": "string",
}
`;

exports[`Open API helpers excludeParamsFromDepiction() should handle intersection 1`] = `
Object {
  "allOf": Array [
    Object {
      "properties": Object {},
      "required": Array [],
      "type": "object",
    },
    Object {
      "properties": Object {
        "b": Object {
          "type": "string",
        },
      },
      "required": Array [
        "b",
      ],
      "type": "object",
    },
  ],
}
`;

exports[`Open API helpers excludeParamsFromDepiction() should handle union 1`] = `
Object {
  "oneOf": Array [
    Object {
      "properties": Object {},
      "required": Array [],
      "type": "object",
    },
    Object {
      "properties": Object {
        "b": Object {
          "type": "string",
        },
      },
      "required": Array [
        "b",
      ],
      "type": "object",
    },
  ],
}
`;

exports[`Open API helpers excludeParamsFromDepiction() should omit specified path params 1`] = `
Object {
  "properties": Object {
    "b": Object {
      "type": "string",
    },
  },
  "required": Array [
    "b",
  ],
  "type": "object",
}
`;
